Añadida opción para editar un árbitro

--- a/templates/arbitro/form.html.twig
+++ b/templates/arbitro/form.html.twig
@@ -6,4 +6,5 @@
     {{ form_widget(form) }}
     <button type="submit">Guardar</button>
     {{ form_end(form) }}
+    <a href="{{ path('arbitro_listar') }}">&lt; Volver al listado sin guardar</a>
 {% endblock %}
