--- a/templates/arbitro/listar.html.twig
+++ b/templates/arbitro/listar.html.twig
@@ -1,13 +1,5 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Árbitros</title>
-</head>
-<body>
+{% extends 'layout.html.twig' %}
+{% block content %}
     <table border="1px">
         <tr>
             <th>Nombre</th>
@@ -24,5 +16,4 @@
             </tr>
         {% endfor %}
     </table>
-</body>
-</html>
+{% endblock %}
