--- a/templates/arbitro/listar.html.twig
+++ b/templates/arbitro/listar.html.twig
@@ -1,6 +1,7 @@
 {% extends 'layout.html.twig' %}
 {% block content %}
-    <table border="1px">
+    <h1>Listado de árbitros</h1>
+    <table class="table table-bordered table-striped table-hover">
         <tr>
             <th>Nombre</th>
             <th>Apellidos</th>
