--- a/templates/arbitro/form.html.twig
+++ b/templates/arbitro/form.html.twig
@@ -3,7 +3,7 @@
     <h1>Modificar árbitro</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button type="submit" class="btn btn-success">Guardar</button>
-    <a href="{{ path('arbitro_listar') }}" class="btn btn-info">Volver al listado sin guardar</a>
+    <button type="submit" class="btn btn-success"><i class="fa fa-check"></i> Guardar</button>
+    <a href="{{ path('arbitro_listar') }}" class="btn btn-info"><i class="fa fa-arrow-left"></i> Volver al listado sin guardar</a>
     {{ form_end(form) }}
 {% endblock %}
