--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,7 +1,37 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+            <a class="navbar-brand" href="#">OreVolley <i class="fa fa-soccer-ball"></i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('arbitro_listar') }}">Árbitros</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
+        {% for mensaje in app.flashes('success') %}
+            <div class="alert alert-success">
+                <i class="fa fa-check-circle"></i> {{ mensaje }}
+            </div>
+        {% endfor %}
+        {% for mensaje in app.flashes('error') %}
+            <div class="alert alert-danger">
+                <i class="fa fa-circle-exclamation"></i> {{ mensaje }}
+            </div>
+        {% endfor %}
+
         {% block content %}{% endblock %}
     </div>
 {% endblock %}
