Mostrar mensajes flash al estilo Bootstrap

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -22,13 +22,15 @@
 
     <div class="container">
         {% for mensaje in app.flashes('success') %}
-            <div class="alert alert-success">
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
                 <i class="fa fa-check-circle"></i> {{ mensaje }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
             </div>
         {% endfor %}
         {% for mensaje in app.flashes('error') %}
-            <div class="alert alert-danger">
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
                 <i class="fa fa-circle-exclamation"></i> {{ mensaje }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
             </div>
         {% endfor %}
 
