--- a/templates/security/entrada.html.twig
+++ b/templates/security/entrada.html.twig
@@ -1,9 +1,15 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <form method="post">
-        <input type="text" name="_username" placeholder="Número de colegiado" />
-        <input type="password" name="_password" placeholder="Clave de acceso" />
-        <button type="submit">Entrar en la aplicación</button>
-    </form>
+    <div class="container">
+        <h1>Entrar en la aplicación</h1>
+        <form method="post">
+            {% if error %}
+                <div class="card mb-2"><div class="card-body">Error de autenticación: {{ error.message }}</div></div>
+            {% endif %}
+            <input type="text" name="_username" placeholder="Número de colegiado" value="{{ ultimo_usuario }}"{% if ultimo_usuario is empty %} autofocus="autofocus"{% endif %}/>
+            <input type="password" name="_password" placeholder="Clave de acceso" {% if ultimo_usuario is not empty %} autofocus="autofocus"{% endif %} />
+            <button type="submit" class="btn btn-info">Entrar en la aplicación</button>
+        </form>
+    </div>
 {% endblock %}
