--- a/templates/arbitro/listar.html.twig
+++ b/templates/arbitro/listar.html.twig
@@ -1,7 +1,10 @@
 {% extends 'layout.html.twig' %}
+
 {% block content %}
     <h1>Listado de árbitros</h1>
-    <a href="{{ path('arbitro_crear') }}" class="btn btn-success"><i class="fa fa-plus"></i> Nuevo árbitro</a>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('arbitro_crear') }}" class="btn btn-success"><i class="fa fa-plus"></i> Nuevo árbitro</a>
+    {% endif %}
     <table class="table table-bordered table-striped table-hover">
         <tr>
             <th>Nombre</th>
