--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -10,10 +10,21 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('portada') }}">Inicio</a>
                     </li>
+                    {% if is_granted('ROLE_USER') %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('arbitro_listar') }}">Árbitros</a>
+                    </li>
+                    {% endif %}
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="me-auto">
+                        {% if app.user %}
+                            <a href="{{ path('app_logout') }}" class="nav-link">Conectado como {{ app.user.nombre }} {{ app.user.apellidos }}. Salir</a>
+                        {% else %}
+                            <a href="{{ path('app_login') }}" class="nav-link">Entrar</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
