--- a/templates/arbitro/listar.html.twig
+++ b/templates/arbitro/listar.html.twig
@@ -19,7 +19,9 @@
                 <td>{{ arbitro.numColegiado }}</td>
                 <td>
                     <a href="{{ path('arbitro_modificar', {'id': arbitro.id}) }}"><i class="fa fa-pencil"></i></a>
+                    {% if is_granted('ROLE_ADMIN') %}
                     <a href="{{ path('arbitro_eliminar', {'id': arbitro.id}) }}"><i class="fa fa-trash"></i></a>
+                    {% endif %}
                 </td>
             </tr>
         {% endfor %}
